Administration -- besoin de révision

--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA65.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA65.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Gérer les dimensions</title>
+<title>Gérer les dimensions des questions</title>
 <link href="../../../../../../css/ea.css" rel="stylesheet" type="text/css" />
 <script>
 function initPage(src) {	
@@ -34,7 +34,7 @@ function nameClassifier(name, separator)
 <div class="pageHeader"></div>
 <div class="PageBody">
 	<div id="name_classifier" style="display: none;"></div>
-	<span class="ObjectTitle"><script type="text/javascript">document.write(nameClassifier("Gérer les dimensions", " : "))</script>  : Public   UseCase</span>
+	<span class="ObjectTitle"><script type="text/javascript">document.write(nameClassifier("Gérer les dimensions des questions", " : "))</script>  : Public   UseCase</span>
 	<table border="0" cellpadding="0" cellspacing="0" class="ObjectDetails">
 		<tr>
 			<td width="15%" class="ObjectDetailsTopic">Created:</td>
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">16/07/2015 13:56:13</td>
+			<td class="ObjectDetailsValue">22/07/2015 15:56:47</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,7 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA59.htm">Administration</a></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">Les dimensions d&#39;un questionnaire sont les différents aspects à évaluer d&#39;une unité d&#39;enseignement ou d&#39;un enseignant. Gérer les dimensions consiste à déterminer quelles sont ces dimensions, leur portée ainsi que leur contenu.&lt;br/&gt;&lt;br/&gt;La section dispositif d&#39;enseignement comporte trois dimensions, définies dans le règlement cadre (&lt;a href=&quot;javascript:top.guidLink(&#39;{69D0A959-7820-4e8c-97D5-086C80178E35}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;règlement cadre&lt;/u&gt;&lt;/font&gt;&lt;/a&gt;) :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Conception des enseignements : « &lt;i&gt;ensemble des activités de conception, planification, organisation, mise en place du dispositif d&#8217;enseignement, ayant typiquement lieu avant l&#8217;interaction avec les étudiants&lt;/i&gt; ».&lt;/li&gt;&lt;li&gt;Évaluation des apprentissages : « &lt;i&gt;activités du dispositif d&#8217;enseignement spécifiquement liées à l&#8217;évaluation des apprentissages des étudiants&lt;/i&gt; ».&lt;/li&gt;&lt;li&gt;Déroulement des enseignements : « &lt;i&gt;ensemble des activités réalisées en interaction avec les étudiants&lt;/i&gt; ».&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Les deux premières dimensions sont génériques, tandis que la troisième peut comporter des aspects spécifiques aux activités d&#39;enseignement entreprises lors du déroulement de l&#39;enseignement. Les activités d&#39;enseignement sont par exemple les cours magistraux, les exercices dirigés, les travaux pratiques, les séminaires, etc. Chacune de ces activités est évaluée par des questions spécifiques déterminées dans le processus « &lt;a href=&quot;javascript:top.guidLink(&#39;{41A139EF-B786-4360-96D1-331AD1165CEC}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Gérer la banque des questions&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; ».&lt;br/&gt;Lors du déroulement d&#39;un enseignement, plusieurs activités peuvent cohabiter. Chacune d&#39;entre elles est incorporée aux questionnaire d&#39;évaluation de l&#39;unité d&#39;enseignement.&lt;br/&gt;&lt;p/&gt;</div>
+	<div class="ObjectDetailsNotes">Les dimensions d&#39;un questionnaire sont les différents aspects à évaluer d&#39;une unité d&#39;enseignement ou d&#39;un enseignant. Gérer les dimensions consiste à déterminer quelles sont ces dimensions, leur portée ainsi que leur contenu.&lt;br/&gt;Le superviseur est chargé de cette tâche, et la conférence des commissions pédagogiques valide ou non ses propositions.&lt;br/&gt;&lt;br/&gt;La section dispositif d&#39;enseignement comporte trois dimensions, définies dans le règlement cadre (&lt;a href=&quot;javascript:top.guidLink(&#39;{69D0A959-7820-4e8c-97D5-086C80178E35}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;règlement cadre&lt;/u&gt;&lt;/font&gt;&lt;/a&gt;) :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Conception des enseignements : « &lt;i&gt;ensemble des activités de conception, planification, organisation, mise en place du dispositif d&#8217;enseignement, ayant typiquement lieu avant l&#8217;interaction avec les étudiants&lt;/i&gt; ».&lt;/li&gt;&lt;li&gt;Évaluation des apprentissages : « &lt;i&gt;activités du dispositif d&#8217;enseignement spécifiquement liées à l&#8217;évaluation des apprentissages des étudiants&lt;/i&gt; ».&lt;/li&gt;&lt;li&gt;Déroulement des enseignements : « &lt;i&gt;ensemble des activités réalisées en interaction avec les étudiants&lt;/i&gt; ».&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Les deux premières dimensions sont génériques, tandis que la troisième peut comporter des aspects spécifiques aux activités d&#39;enseignement entreprises lors du déroulement de l&#39;enseignement. Les activités d&#39;enseignement sont par exemple les cours magistraux, les exercices dirigés, les travaux pratiques, les séminaires, etc. Chacune de ces activités est évaluée par des questions spécifiques déterminées dans le processus « &lt;a href=&quot;javascript:top.guidLink(&#39;{41A139EF-B786-4360-96D1-331AD1165CEC}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Gérer la banque des questions&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; ».&lt;br/&gt;Lors du déroulement d&#39;un enseignement, plusieurs activités peuvent cohabiter. Chacune d&#39;entre elles est incorporée aux questionnaire d&#39;évaluation de l&#39;unité d&#39;enseignement.&lt;p/&gt;</div>
 
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
