--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA69.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA69.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">16/07/2015 14:25:43</td>
+			<td class="ObjectDetailsValue">22/07/2015 12:41:51</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,7 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA59.htm">Administration</a></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">Le superviseur doit gérer les modèles des messages pouvant être envoyés à la communauté universitaire dans le cadre de l&#39;évaluation des enseignements.&lt;br/&gt;Ces modèles sont ensuite récupérés par le gestionnaire de communication afin de diffuser les invitations à la prise d&#39;avis, à la consultation des résultats, etc.&lt;br/&gt;&lt;br/&gt;Les modèles sont sous l&#39;entière responsabilité du superviseur et ce dernier peut les mettre à jour à tout moment.&lt;br/&gt;&lt;br/&gt;Pour certains types de message, le superviseur peut faire appel au traducteur.&lt;p/&gt;</div>
+	<div class="ObjectDetailsNotes">Le superviseur doit gérer les modèles des messages pouvant être envoyés à la communauté universitaire dans le cadre de l&#39;évaluation des enseignements.&lt;br/&gt;Ces modèles sont ensuite récupérés par le gestionnaire de communication afin de diffuser les invitations à la prise d&#39;avis, à la consultation des résultats, etc.&lt;br/&gt;&lt;br/&gt;Les modèles sont sous l&#39;entière responsabilité du superviseur et ce dernier peut les mettre à jour à tout moment.&lt;br/&gt;&lt;br/&gt;Pour certains types de message, le superviseur peut faire appel au service de traduction.&lt;p/&gt;</div>
 
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
