--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA70.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA70.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">13/07/2015 09:43:17</td>
+			<td class="ObjectDetailsValue">22/07/2015 17:23:06</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,8 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA59.htm">Administration</a></td>
 		</tr>
 	</table>
-	
+	<div class="ObjectDetailsNotes">Gérer les sujets de campagne consiste à maintenir la liste des utilisateurs autorisée à prendre part à la campagne d&#39;évaluation des enseignements en répondant aux questionnaires d&#39;évaluation. Cette liste est gérée par le superviseur.&lt;br/&gt;Pour chaque campagne, cette liste doit être conservée.&lt;br/&gt;&lt;br/&gt;À ce stade, les seuls utilisateurs à donner leur avis lors de l&#39;enquête sont les étudiants.&lt;p/&gt;</div>
+
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
 			<li onClick="parent.toggleItem('AssociationsFrom');" id="AssociationsFromTitle">Associations From</li>
