--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA71.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA71.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">13/07/2015 09:40:53</td>
+			<td class="ObjectDetailsValue">23/07/2015 11:39:09</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,11 +94,16 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA59.htm">Administration</a></td>
 		</tr>
 	</table>
-	
+	<div class="ObjectDetailsNotes">Gérer les statistiques des évaluation demande au superviseur de produire un ensemble de statistiques à partir des données des différentes campagnes d&#39;évaluation.&lt;br/&gt;&lt;br/&gt;Plusieurs composantes peuvent être analysées :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Le nombre de participant&lt;/li&gt;&lt;li&gt;Les avis périodiques&lt;/li&gt;&lt;li&gt;Les entités pédagogiques évaluées&lt;/li&gt;&lt;li&gt;La prise d&#39;avis (durée nécessaire à la complétion des questionnaires, etc.)&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Le superviseur donne ensuite accès à ces statistiques à différents groupes d&#39;utilisateurs de l&#39;application : étudiants, commissions pédagogiques, enseignants, etc.&lt;br/&gt;&lt;br/&gt;Toutes les statistiques sont rassemblées dans une table des statistiques maintenue par le superviseur.&lt;br/&gt;Chaque statistique peut avoir une présentation spécifique gérée par le superviseur.&lt;br/&gt;&lt;br/&gt;&lt;p/&gt;</div>
+
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
+			<li onClick="parent.toggleItem('LinkedDocument');" id="LinkedDocumentTitle">Linked Document</li>
 			<li onClick="parent.toggleItem('AssociationsFrom');" id="AssociationsFromTitle">Associations From</li>
 		</ul>
+		<div class="ItemBody" id="LinkedDocumentTable">
+			<iframe src="../../../../../../linkdocs/EAID_F847BBD1_CDE5_449d_BF33_3A8D6B6ABB3B.htm" frameborder="0" id="linkDocIFrame"></iframe>
+		</div>
 		<div class="ItemBody" id="AssociationsFromTable">
 			<table border="0" cellspacing="0" cellpadding="0" class="Table">
 				<tr>
