--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA74.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA74.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">13/07/2015 09:46:18</td>
+			<td class="ObjectDetailsValue">23/07/2015 15:41:21</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,8 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA59.htm">Administration</a></td>
 		</tr>
 	</table>
-	
+	<div class="ObjectDetailsNotes">La gestion des unités d&#39;enseignement est le processus déterminant quelles UE seront évaluées lors de la campagne d&#39;évaluation.&lt;br/&gt;&lt;br/&gt;Chaque UE est liée à une faculté.&lt;br/&gt;&lt;br/&gt;Pour chaque UE, une liste d&#39;enseignants est associée. =#gt; Les deux listes sont-elles associées à ce niveau ou au moment de la construction de la campagne ?&lt;p/&gt;</div>
+
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
 			<li onClick="parent.toggleItem('Links');" id="LinksTitle">Other Links</li>
