--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA2/EA81.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA2/EA81.htm
@@ -91,7 +91,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr id="adv01" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Appears In:</td>
-			<td class="ObjectDetailsValue"><a href="../EA3/EA85.htm">Enquête</a>, <a href="EA77.htm">Consultation des évaluations</a></td>
+			<td class="ObjectDetailsValue"><a href="../EA3/EA86.htm">Enquête</a>, <a href="EA77.htm">Consultation des évaluations</a></td>
 		</tr>
 	</table>
 	<div class="ObjectDetailsNotes">La consultation par unités d&#39;enseignement est une réalisation de « &lt;a href=&quot;javascript:top.guidLink(&#39;{6A294285-B80F-4599-BE63-3073599842B7}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Consulter la grille des résultats&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; ».&lt;br/&gt;Dans ce cas :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;L&#39;entité consultée est l&#39;unité d&#39;enseignement&lt;/li&gt;&lt;li&gt;L&#39;identifiant est le NRE&lt;/li&gt;&lt;li&gt;Information additionnelle : mnémonique&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;&lt;p/&gt;</div>
@@ -110,14 +110,14 @@ function nameClassifier(name, separator)
 					<td width="40%" class="TableHeading">Notes</td>
 				</tr>
 				<tr>
-					<td width="30%" class="TableRow" valign="top"><a href="../EA3/EA91.htm">Consulter la grille des résultats</a></td>
+					<td width="30%" class="TableRow" valign="top"><a href="EA82.htm">Consulter la grille des résultats</a></td>
 					<td width="10%" class="TableRow" valign="top">UseCase</td>
 					<td width="10%" class="TableRow" valign="top">Realization</td>
 					<td width="10%" class="TableRow" valign="top">To</td>
 					<td width="40%" class="TableRow" valign="top">&nbsp;</td>
 				</tr>
 				<tr>
-					<td width="30%" class="TableRow" valign="top"><a href="EA82.htm">Consulter la grille des résultats par campagne</a></td>
+					<td width="30%" class="TableRow" valign="top"><a href="EA83.htm">Consulter la grille des résultats par campagne</a></td>
 					<td width="10%" class="TableRow" valign="top">UseCase</td>
 					<td width="10%" class="TableRow" valign="top">Realization</td>
 					<td width="10%" class="TableRow" valign="top">To</td>
