--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA3/EA86.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA3/EA86.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Dépouillement</title>
+<title>Enquête</title>
 <link href="../../../../../../css/ea.css" rel="stylesheet" type="text/css" />
 <script>
 function initPage(src) {	
@@ -31,100 +31,64 @@ function nameClassifier(name, separator)
 </script>
 </head>
 <body onload="initPage(this);" class="Content">
-<div class="pageHeader"></div>
 <div class="PageBody">
-	<div id="name_classifier" style="display: none;"></div>
-	<span class="ObjectTitle"><script type="text/javascript">document.write(nameClassifier("Dépouillement", " : "))</script>  : Public   Collaboration</span>
+	
+<img src="EA87.png" usemap="#EA87" border="0" />
+
+<MAP NAME="EA87">
+<area shape="rect" coords="411,335,516,405" href="EA89.htm" target="_self">
+<area shape="rect" coords="521,857,626,927" href="EA90.htm" target="_self">
+<area shape="rect" coords="509,966,614,1036" href="EA91.htm" target="_self">
+<area shape="rect" coords="30,909,75,999" href="../../../../../EA1/EA2/EA1/EA25.htm" target="_self">
+<area shape="rect" coords="636,620,681,710" href="../../../../../EA1/EA2/EA1/EA32.htm" target="_self">
+<area shape="rect" coords="323,788,428,858" href="EA94.htm" target="_self">
+<area shape="rect" coords="90,172,195,242" href="../EA2/EA81.htm" target="_self">
+<area shape="rect" coords="112,318,217,388" href="../EA2/EA80.htm" target="_self">
+<area shape="rect" coords="363,624,468,694" href="../EA2/EA85.htm" target="_self">
+<area shape="rect" coords="640,332,685,422" href="../../../../../EA1/EA2/EA1/EA27.htm" target="_self">
+<area shape="rect" coords="638,139,683,229" href="../../../../../EA1/EA2/EA1/EA31.htm" target="_self">
+<area shape="rect" coords="91,534,194,603" href="EA92.htm" target="_self">
+<area shape="rect" coords="92,447,197,517" href="EA93.htm" target="_self">
+<area shape="rect" coords="292,501,397,571" href="EA96.htm" target="_self">
+<area shape="rect" coords="175,915,319,1011" href="../EA2/EA84.htm" target="_self">
+<area shape="rect" coords="297,198,402,268" href="../EA2/EA82.htm" target="_self">
+<area shape="rect" coords="88,10,133,100" href="../../../../../EA1/EA2/EA17.htm" target="_self">
+<area shape="rect" coords="317,26,422,96" href="EA95.htm" target="_self">
+</MAP>
+
+	<div class="ObjectTitle">Enquête : Use Case diagram</div>
 	<table border="0" cellpadding="0" cellspacing="0" class="ObjectDetails">
 		<tr>
 			<td width="15%" class="ObjectDetailsTopic">Created:</td>
-			<td width="85%" class="ObjectDetailsValue">13/07/2015 09:58:27</td>
+			<td width="85%" class="ObjectDetailsValue">13/07/2015 09:55:00</td>
 		</tr>
 		<tr>
-			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">15/07/2015 11:04:54</td>
+			<td width="15%" class="ObjectDetailsTopic">Modified:</td>
+			<td width="85%" class="ObjectDetailsValue">22/07/2015 10:59:34</td>
 		</tr>
-		<tr style="height: 10px"><td colspan="2"></td></tr>
-		<tr>
-			<td class="ObjectDetailsTopic"><img src="../../../../../../images/plus03.gif" align="absmiddle" id="proj" onclick="parent.toggleData(this.id)" />Project:</td>
-			<td class="ObjectDetailsValue"></td>
+		<tr style="padding-top: 10px;">
+			<td width="15%" class="ObjectDetailsTopic"><img src="../../../../../../images/plus03.gif" align="absmiddle" id="proj" onclick="parent.toggleData(this.id)" />Project:</td>
+			<td width="85%" class="ObjectDetailsValue"></td>			
 		</tr>
 		<tr id="proj00" style="display: none;">
-			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Author:</td>
-			<td class="ObjectDetailsValue">Quentin</td>
+			<td width="15%" class="ObjectDetailsTopic" style="padding-left: 18px;">Author:</td>
+			<td width="85%" class="ObjectDetailsValue">EvalEns</td>
 		</tr>
 		<tr id="proj01" style="display: none;">
-			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Version:</td>
-			<td class="ObjectDetailsValue">1.0</td>
-		</tr>
-		<tr id="proj02" style="display: none;">
-			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Phase:</td>
-			<td class="ObjectDetailsValue">1.0</td>
-		</tr>
-		<tr id="proj03" style="display: none;">
-			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Status:</td>
-			<td class="ObjectDetailsValue">Proposed</td>
-		</tr>
-		<tr id="proj04" style="display: none;">
-			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Complexity:</td>
-			<td class="ObjectDetailsValue">Easy</td>
-		</tr>
-		<tr id="proj05" style="display: none;">
-			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Difficulty:</td>
-			<td class="ObjectDetailsValue"></td>
-		</tr>
-		<tr id="proj06" style="display: none;">
-			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Priority:</td>
-			<td class="ObjectDetailsValue"></td>
-		</tr>
-		<tr id="proj05" style="display: none;">
-			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Multiplicity:</td>
-			<td class="ObjectDetailsValue"></td>
+			<td width="15%" class="ObjectDetailsTopic" style="padding-left: 18px;">Version:</td>
+			<td width="85%" class="ObjectDetailsValue">1.0</td>
 		</tr>
 		<tr>
-			<td class="ObjectDetailsTopic"><img src="../../../../../../images/plus03.gif" align="absmiddle" id="adv" onclick="parent.toggleData(this.id)" />Advanced:</td>
-			<td class="ObjectDetailsValue"></td>
+			<td width="15%" class="ObjectDetailsTopic"><img src="../../../../../../images/plus03.gif" align="absmiddle" id="adv" onclick="parent.toggleData(this.id)" />Advanced:</td>
+			<td width="85%" class="ObjectDetailsValue"></td>			
 		</tr>
 		<tr id="adv00" style="display: none;">
-			<td class="ObjectDetailsTopic" style="padding-left: 18px;">UUID:</td>
-			<td class="ObjectDetailsValue">{1DB386BF-C653-4db8-B884-F07BF27DBBBD}</td>
-		</tr>
-		<tr id="adv01" style="display: none;">
-			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Appears In:</td>
-			<td class="ObjectDetailsValue"><a href="EA82.htm">Enquête</a></td>
+			<td width="15%" class="ObjectDetailsTopic" style="padding-left: 18px;">ID:</td>
+			<td width="85%" class="ObjectDetailsValue">{0B5ADC2C-02F7-4da6-90BE-1EDB1B191A7F}</td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">Le dépouillement est le premier traitement des résutlats des questionnaires d&#39;évaluation effectué par quelques membres de la commission pédagogique facultaire. Ces derniers distinguent les cas nécessitant ou non une délibération en assemblée plénière.&lt;br/&gt;Trois mécanismes entrent en jeu dans le dépouillement :&lt;br/&gt;&lt;ol&gt;<br />&lt;li&gt;Calcul des indicateurs d&#39;évaluation. Sur base des réponses aux questionnaires d&#39;évaluation, il est calculé un indicateur par dimension représentant une appréciation statistique des résultats de l&#39;unité d&#39;enseignement.&lt;/li&gt;&lt;li&gt;Traduction des indicateurs. La commission pédagogique a la possibilité de traduire automatiquement les indicateurs en évaluations.&lt;/li&gt;&lt;li&gt;Évaluation. La commission peut modifier les évaluations automatiques ou évaluer les unités d&#39;enseignement n&#39;ayant pas été traduites.&lt;/li&gt;&lt;/ol&gt;<br />&lt;br/&gt;Les membres de la commission on accès à deux types d&#39;interface pour analyser les résultats :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Un affichage de toutes les unités d&#39;enseignement et des enseignants associés pour lesquels ils sont compétents (c&#39;est-à-dire rattachés à leur faculté).&lt;/li&gt;&lt;li&gt;Un affichage individuel pour chaque unité d&#39;enseignement.&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Les détails des interfaces d&#39;évaluation et de consultation sont décrits dans le processus « &lt;a href=&quot;javascript:top.guidLink(&#39;{6A294285-B80F-4599-BE63-3073599842B7}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Consulter par grille&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; ».&lt;br/&gt;&lt;br/&gt;Lorsqu&#39;un membre de la commission juge qu&#39;une unité d&#39;enseignement ou un enseignant ne nécessite pas de discussion, il peut lui assigner l&#39;une des cinq appréciations présentées dans le processus « &lt;a href=&quot;javascript:top.guidLink(&#39;{617E555E-FFEF-4937-9728-73D572DD152C}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Traiter les résultats&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; », et l&#39;agrémenter d&#39;un commentaire circonstancié.&lt;p/&gt;</div>
-
-	<div class="TableGroup" id="TableGroup">
-		<ul class="ItemTitle">
-			<li onClick="parent.toggleItem('LinkedDocument');" id="LinkedDocumentTitle">Linked Document</li>
-			<li onClick="parent.toggleItem('Links');" id="LinksTitle">Other Links</li>
-		</ul>
-		<div class="ItemBody" id="LinkedDocumentTable">
-			<iframe src="../../../../../../linkdocs/EAID_1DB386BF_C653_4db8_B884_F07BF27DBBBD.htm" frameborder="0" id="linkDocIFrame"></iframe>
-		</div>
-		<div class="ItemBody" id="LinksTable">
-			<table align="center" border="0" cellspacing="0" cellpadding="0" class="Table">
-				<tr>
-					<td width="30%" class="TableHeading">Object</td>
-					<td width="10%" class="TableHeading">Type</td>
-					<td width="10%" class="TableHeading">Connection</td>
-					<td width="10%" class="TableHeading">Direction</td>
-					<td width="40%" class="TableHeading">Notes</td>
-				</tr>
-				<tr>
-					<td width="30%" class="TableRow" valign="top"><a href="EA90.htm">Traiter les résultats</a></td>
-					<td width="10%" class="TableRow" valign="top">UseCase</td>
-					<td width="10%" class="TableRow" valign="top">Realization</td>
-					<td width="10%" class="TableRow" valign="top">To</td>
-					<td width="40%" class="TableRow" valign="top">&nbsp;</td>
-				</tr>
-
-			</table>
-		</div>
-	</div>
-<div class="pageFooter"></div>
+	
+</div>
  
 </body>
 </html>
