--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA3/EA93.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA3/EA93.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Émission des avis périodiques</title>
+<title>Dépouillement</title>
 <link href="../../../../../../css/ea.css" rel="stylesheet" type="text/css" />
 <script>
 function initPage(src) {	
@@ -34,15 +34,15 @@ function nameClassifier(name, separator)
 <div class="pageHeader"></div>
 <div class="PageBody">
 	<div id="name_classifier" style="display: none;"></div>
-	<span class="ObjectTitle"><script type="text/javascript">document.write(nameClassifier("Émission des avis périodiques", " : "))</script>  : Public   Collaboration</span>
+	<span class="ObjectTitle"><script type="text/javascript">document.write(nameClassifier("Dépouillement", " : "))</script>  : Public   Collaboration</span>
 	<table border="0" cellpadding="0" cellspacing="0" class="ObjectDetails">
 		<tr>
 			<td width="15%" class="ObjectDetailsTopic">Created:</td>
-			<td width="85%" class="ObjectDetailsValue">13/07/2015 09:58:36</td>
+			<td width="85%" class="ObjectDetailsValue">13/07/2015 09:58:27</td>
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">17/07/2015 10:45:56</td>
+			<td class="ObjectDetailsValue">22/07/2015 09:53:21</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -87,14 +87,14 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr id="adv00" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">UUID:</td>
-			<td class="ObjectDetailsValue">{B12670D0-B63B-415d-8A85-A2A35F552C24}</td>
+			<td class="ObjectDetailsValue">{1DB386BF-C653-4db8-B884-F07BF27DBBBD}</td>
 		</tr>
 		<tr id="adv01" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Appears In:</td>
-			<td class="ObjectDetailsValue"><a href="EA85.htm">Enquête</a></td>
+			<td class="ObjectDetailsValue"><a href="EA86.htm">Enquête</a></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">L&#39;émission des avis périodiques consiste en l&#39;évaluation des unités d&#39;enseignement et des enseignants n&#39;ayant pas été évalués lors du dépouillement. Elle se déroule en assemblée plénière de la commission pédagogique facultaire.&lt;br/&gt;Lors de cette réunion, la commission analyse les résultats, donne des appréciations (voir « &lt;a href=&quot;javascript:top.guidLink(&#39;{617E555E-FFEF-4937-9728-73D572DD152C}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Traiter les résultats&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; ») et formule des commentaires au sujet des unités d&#39;enseignement et des enseignants.&lt;br/&gt;&lt;br/&gt;Les cas potentiellement « problématiques » au sens de l&#39;échelle d&#39;appréciation sont systématiquement évalués lors de la délibération, puisqu&#39;ils ne sont pas triviaux. Le processus décrivant leur traitement est décrit dans « &lt;a href=&quot;javascript:top.guidLink(&#39;{1AF2652A-F7D2-498e-B33E-61D662CEF39E}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Gérer les évaluations défavorables&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; ».&lt;p/&gt;</div>
+	<div class="ObjectDetailsNotes">Le dépouillement est l&#39;évaluation préliminaire des données issues du traitement des résultats de l&#39;enquête. Celle-ci est effectuée par une partie des membres de la commission pédagogique facultaire. Ces derniers distinguent les cas nécessitant ou non une délibération en assemblée plénière.&lt;br/&gt;Pour les cas ne nécessitant pas une assemblée, on effectue une traduction des indicateurs en avis périodique.&lt;br/&gt;Pour les autres, il est possible d&#39;adjoindre des informations supplémentaire afin de préparer la réunion de la commission pédagogique.&lt;br/&gt;&lt;p/&gt;</div>
 
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
@@ -102,7 +102,7 @@ function nameClassifier(name, separator)
 			<li onClick="parent.toggleItem('Links');" id="LinksTitle">Other Links</li>
 		</ul>
 		<div class="ItemBody" id="LinkedDocumentTable">
-			<iframe src="../../../../../../linkdocs/EAID_B12670D0_B63B_415d_8A85_A2A35F552C24.htm" frameborder="0" id="linkDocIFrame"></iframe>
+			<iframe src="../../../../../../linkdocs/EAID_1DB386BF_C653_4db8_B884_F07BF27DBBBD.htm" frameborder="0" id="linkDocIFrame"></iframe>
 		</div>
 		<div class="ItemBody" id="LinksTable">
 			<table align="center" border="0" cellspacing="0" cellpadding="0" class="Table">
