--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA4/EA109.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA4/EA109.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">15/07/2015 18:04:01</td>
+			<td class="ObjectDetailsValue">22/07/2015 11:24:01</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,7 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA97.htm">Gestion de campagnes</a></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">Gérer les publications consiste à rendre les supports publicitaires disponibles, pour chaque chaque campagne, aux gestionnaires de communication facultaires et institutionnels. Ces derniers pourront ensuite utiliser ces ressources pour faire la publicité de la campagne d&#39;évaluation des enseignements avant la période de prise d&#39;avis.&lt;br/&gt;&lt;br/&gt;Les supports publicitaires sont de plusieurs types :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Destinés aux réseaux sociaux&lt;/li&gt;&lt;li&gt;Affiches imprimables&lt;/li&gt;&lt;li&gt;Bannières publicitaires&lt;/li&gt;&lt;li&gt;Modèles de newsletter&lt;/li&gt;&lt;li&gt;etc.&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Le gestionnaire de communication du projet est responsable de la production des supports publicitaires.&lt;p/&gt;</div>
+	<div class="ObjectDetailsNotes">Gérer les publications consiste à rendre les supports publicitaires disponibles, pour chaquecampagne, aux gestionnaires de communication facultaires et institutionnels. Ces derniers pourront ensuite utiliser ces ressources pour faire la publicité de la campagne d&#39;évaluation des enseignements avant la période de prise d&#39;avis.&lt;br/&gt;&lt;br/&gt;Les supports publicitaires sont de plusieurs types :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Destinés aux réseaux sociaux&lt;/li&gt;&lt;li&gt;Affiches imprimables&lt;/li&gt;&lt;li&gt;Bannières publicitaires&lt;/li&gt;&lt;li&gt;Modèles de newsletter&lt;/li&gt;&lt;li&gt;etc.&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Le gestionnaire de communication du projet est responsable de la production des supports publicitaires.&lt;p/&gt;</div>
 
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
