--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA64.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA64.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Gérer la banque des questionnaires</title>
+<title>Gérer la banque des questions</title>
 <link href="../../../../../../css/ea.css" rel="stylesheet" type="text/css" />
 <script>
 function initPage(src) {	
@@ -34,7 +34,7 @@ function nameClassifier(name, separator)
 <div class="pageHeader"></div>
 <div class="PageBody">
 	<div id="name_classifier" style="display: none;"></div>
-	<span class="ObjectTitle"><script type="text/javascript">document.write(nameClassifier("Gérer la banque des questionnaires", " : "))</script>  : Public   UseCase</span>
+	<span class="ObjectTitle"><script type="text/javascript">document.write(nameClassifier("Gérer la banque des questions", " : "))</script>  : Public   UseCase</span>
 	<table border="0" cellpadding="0" cellspacing="0" class="ObjectDetails">
 		<tr>
 			<td width="15%" class="ObjectDetailsTopic">Created:</td>
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">16/07/2015 14:21:13</td>
+			<td class="ObjectDetailsValue">22/07/2015 17:10:45</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,7 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA59.htm">Administration</a></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">Gérer la banque de questionnaires est une tâche consistant à mettre à jour l&#39;ensemble des questionnaires pouvant être utilisés lors de campagnes d&#39;évaluation. Cette tâche est prise en charge par la conférence des commissions pédagogiques.&lt;br/&gt;&lt;br/&gt;La banque de questionnaires est définie comme suit dans le règlement cadre (&lt;a href=&quot;javascript:top.guidLink(&#39;{69D0A959-7820-4e8c-97D5-086C80178E35}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;règlement cadre&lt;/u&gt;&lt;/font&gt;&lt;/a&gt;) : « Ensemble évolutif de questionnaires définis conjointement par les facultés au sein de la Conférence des commissions pédagogiques. »&lt;br/&gt;&lt;br/&gt;&lt;br/&gt;&lt;br/&gt;Les questions sont élaborées avec l&#39;aide d&#39;un conseiller pédagogique.&lt;p/&gt;</div>
+	<div class="ObjectDetailsNotes">Gérer la banque de questions est une tâche consistant à mettre à jour l&#39;ensemble des questions pouvant être utilisées lors des campagnes d&#39;évaluation. Cette banque est alimentée par le superviseur qui soumet la soumet ensuite à la conférence des commissions pédagogiques pour validation.&lt;br/&gt;&lt;br/&gt;Les questions sont toutes liées avec l&#39;une des dimensions définies dans « &lt;a href=&quot;javascript:top.guidLink(&#39;{40ECCEF5-77D9-40c7-A1E5-CB0E03BEBBB1}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Gérer les dimensions des questions&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; ». Elles ont aussi un statut dépendant de leur soumission à la CoCoPé :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Validée&lt;/li&gt;&lt;li&gt;Rejetée&lt;/li&gt;&lt;li&gt;En attente&lt;/li&gt;&lt;li&gt;...&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Il y a deux types de questions :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Générique, indépendante de toute activité d&#39;apprentissage.&lt;/li&gt;&lt;li&gt;Spécifique à une activité d&#39;apprentissage particulière.&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;&lt;br/&gt;&lt;br/&gt;&lt;br/&gt;La banque de questions est définie comme suit dans le règlement cadre (&lt;a href=&quot;javascript:top.guidLink(&#39;{69D0A959-7820-4e8c-97D5-086C80178E35}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;règlement cadre&lt;/u&gt;&lt;/font&gt;&lt;/a&gt;) : « Ensemble évolutif de questionnaires définis conjointement par les facultés au sein de la Conférence des commissions pédagogiques. »&lt;br/&gt;&lt;br/&gt;Les questions sont élaborées avec l&#39;aide d&#39;un conseiller pédagogique.&lt;p/&gt;</div>
 
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
