--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA66.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA66.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">17/07/2015 15:53:24</td>
+			<td class="ObjectDetailsValue">23/07/2015 11:43:46</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,8 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA59.htm">Administration</a></td>
 		</tr>
 	</table>
-	
+	<div class="ObjectDetailsNotes">Gérer les entités pédagogiques de la campagne permet de déterminer quelles entités pédagogiques feront l&#39;objet d&#39;une campagne d&#39;évaluation des enseignments. Ce processus est géré par le superviseur qui est chargé de maintenir à jour la liste des entités pédagogiques.&lt;br/&gt;&lt;br/&gt;Ce processus est composé de deux listes :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Les enseignants&lt;/li&gt;&lt;li&gt;Les unités d&#39;enseignement&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Ces listes peuvent être amenées à évoluer, mais les listes associées à chaque campagne doivent être conservées.&lt;br/&gt;&lt;br/&gt;Lors de ce processus, le superviseur lie des enseignants à chaque UE. Ces informations sont ensuite confirmées par les enseignants en question à la demande du recteur ou du vice-recteur qu&#39;il aura désigné.&lt;p/&gt;</div>
+
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
 			<li onClick="parent.toggleItem('AssociationsFrom');" id="AssociationsFromTitle">Associations From</li>
