--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA68.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA68.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">17/07/2015 10:22:41</td>
+			<td class="ObjectDetailsValue">22/07/2015 17:15:38</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,7 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA59.htm">Administration</a></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">Gérer la liste des qulificatifs consiste à maintenir à jour les différentes mentions, indicateurs et autres qualificatifs possibles.&lt;br/&gt;&lt;br/&gt;Les qualificatifs suivants nécessitent une gestion :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Mention du taux d&#39;accord des réponses&lt;/li&gt;&lt;li&gt;Indicateur d&#39;évaluation de la dimension&lt;/li&gt;&lt;li&gt;Appréciation des évaluations&lt;/li&gt;&lt;li&gt;Réponses possibles aux questionnaires (échelle de Likert paire)&lt;/li&gt;&lt;li&gt;Options du filtre « indicateur dispositif »&lt;/li&gt;&lt;li&gt;Options du filtre « avis rendu »&lt;/li&gt;&lt;li&gt;Options du filtre « avis rendu dispositif »&lt;/li&gt;&lt;li&gt;Options du filtre « avis rendu enseignant »&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;La liste des activités d&#39;apprentissage est aussi gérée par le superviseur. Cette dernière est définie par le conseil académique (voir &lt;a href=&quot;javascript:top.guidLink(&#39;{C6EB0DEF-6C55-4cc6-891F-EEE7D931DAAA}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Liste des activités d&#39;apprentissage&lt;/u&gt;&lt;/font&gt;&lt;/a&gt;).&lt;br/&gt;&lt;br/&gt;Gestion du contenu de la liste + style.&lt;br/&gt;Dont liste des acta&lt;p/&gt;</div>
+	<div class="ObjectDetailsNotes">Gérer la liste des qualificatifs consiste à maintenir à jour les différentes mentions, indicateurs et autres qualificatifs possibles.&lt;br/&gt;&lt;br/&gt;Les qualificatifs suivants nécessitent une gestion :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Mention du taux d&#39;accord des réponses&lt;/li&gt;&lt;li&gt;Indicateur d&#39;évaluation de la dimension&lt;/li&gt;&lt;li&gt;Appréciation des évaluations&lt;/li&gt;&lt;li&gt;Réponses possibles aux questionnaires (échelle de Likert paire)&lt;/li&gt;&lt;li&gt;Options du filtre « indicateur dispositif »&lt;/li&gt;&lt;li&gt;Options du filtre « avis rendu »&lt;/li&gt;&lt;li&gt;Options du filtre « avis rendu dispositif »&lt;/li&gt;&lt;li&gt;Options du filtre « avis rendu enseignant »&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;La liste des activités d&#39;apprentissage est aussi gérée par le superviseur. Cette dernière est définie par le conseil académique (voir &lt;a href=&quot;javascript:top.guidLink(&#39;{C6EB0DEF-6C55-4cc6-891F-EEE7D931DAAA}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Liste des activités d&#39;apprentissage&lt;/u&gt;&lt;/font&gt;&lt;/a&gt;).&lt;br/&gt;&lt;br/&gt;Le superviseur est aussi responsable du style associé à chaque qualificatif.&lt;br/&gt;&lt;p/&gt;</div>
 
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
