--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA72.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA72.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">13/07/2015 09:46:25</td>
+			<td class="ObjectDetailsValue">23/07/2015 14:34:19</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,8 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA59.htm">Administration</a></td>
 		</tr>
 	</table>
-	
+	<div class="ObjectDetailsNotes">La gestion des enseignants est le processus déterminant quels enseignants seront évalués lors de la campagne d&#39;évaluation.&lt;br/&gt;&lt;br/&gt;&lt;br/&gt;&lt;br/&gt;&lt;br/&gt;&lt;br/&gt;&lt;br/&gt;Les enseignants sont associés à des unités d&#39;enseignement.&lt;br/&gt;&lt;br/&gt;Déterminer si un enseignant est titulaire ou non. =#gt; statut de l&#39;enseignant.&lt;p/&gt;</div>
+
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
 			<li onClick="parent.toggleItem('Links');" id="LinksTitle">Other Links</li>
