--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA73.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA73.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">13/07/2015 09:47:33</td>
+			<td class="ObjectDetailsValue">23/07/2015 15:49:33</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,8 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA59.htm">Administration</a></td>
 		</tr>
 	</table>
-	
+	<div class="ObjectDetailsNotes">La gestion des étudiants est le processus déterminant quelle population est éligible à la prise d&#39;avis de la campagne d&#39;évaluation.&lt;br/&gt;&lt;br/&gt;Ainsi, les étudiants Erasmus et de la VUB ne peuvent participer à l&#39;enquête.&lt;br/&gt;=#gt; Document définissant clairement quels étudiants peuvent prendre part à l&#39;enquête ?&lt;br/&gt;&lt;br/&gt;&lt;p/&gt;</div>
+
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
 			<li onClick="parent.toggleItem('Links');" id="LinksTitle">Other Links</li>
