--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA75.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA1/EA75.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">16/07/2015 10:17:25</td>
+			<td class="ObjectDetailsValue">23/07/2015 09:43:12</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,13 +94,17 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA59.htm">Administration</a></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">Réaliser le questionnaire d&#39;évaluation implique deux processus : « &lt;a href=&quot;javascript:top.guidLink(&#39;{41A139EF-B786-4360-96D1-331AD1165CEC}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Gérer la banque des questions&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; » et « &lt;a href=&quot;javascript:top.guidLink(&#39;{40ECCEF5-77D9-40c7-A1E5-CB0E03BEBBB1}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Gérer les dimensions&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; ».&lt;br/&gt;&lt;br/&gt;C&#39;est le superviseur qui réalise le questionnaire qui doit ensuite être validé par le conseil des commissions pédagogiques. Le superviseur confie ensuite la traduction des questionnaires à un service de traduction. Si la traduction est incomplète ou fait défaut, la langue d&#39;émission est conservée.&lt;br/&gt;Lorsque le questionnaire est complet, le CoCoPe se charge de l&#39;associer à la campagne d&#39;évaluation.&lt;br/&gt;&lt;br/&gt;Au moins un mois avant la période de prise d&#39;avis, le recteur ou le vice-recteur désigné par lui demande aux enseignants de confirmer les données des unités d&#39;enseignement auxquelles ils sont associés. Toute demande de modification doit être validé par l&#39;administrateur facultaire.&lt;br/&gt;&lt;br/&gt;Chaque questionnaire est divisé en plusieurs sections :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Présence de l&#39;étudiant aux activités d&#39;enseignement&lt;/li&gt;&lt;li&gt;Dispositif d&#39;enseignement&lt;/li&gt;&lt;li&gt;Enseignant. Cette section est répétée pour chaque enseignant associé à l&#39;UE.&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Avant d&#39;être mis en production, les questionnaires sont testé auprès d&#39;un panel d&#39;étudiant afin de vérifier leur compréhension.&lt;br/&gt;&lt;br/&gt;Les questionnaires liés à chaque campagne doivent être conservés à des fins de consultation.&lt;br/&gt;&lt;p/&gt;</div>
+	<div class="ObjectDetailsNotes">Réaliser le questionnaire d&#39;évaluation implique deux processus : « &lt;a href=&quot;javascript:top.guidLink(&#39;{41A139EF-B786-4360-96D1-331AD1165CEC}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Gérer la banque des questions&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; » et « &lt;a href=&quot;javascript:top.guidLink(&#39;{40ECCEF5-77D9-40c7-A1E5-CB0E03BEBBB1}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Gérer les dimensions&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; ».&lt;br/&gt;&lt;br/&gt;C&#39;est le superviseur qui réalise le questionnaire qui doit ensuite être validé par le conseil des commissions pédagogiques. Le superviseur confie ensuite la traduction des questionnaires à un service de traduction. Si la traduction est incomplète ou fait défaut, la langue d&#39;émission est conservée.&lt;br/&gt;Lorsque le questionnaire est complet, le CoCoPé se charge de l&#39;associer à la campagne d&#39;évaluation.&lt;br/&gt;&lt;br/&gt;Au moins un mois avant la période de prise d&#39;avis, le recteur ou le vice-recteur désigné par lui demande aux enseignants de confirmer les données des unités d&#39;enseignement auxquelles ils sont associés. Toute demande de modification doit être validée par l&#39;administrateur facultaire.&lt;br/&gt;&lt;br/&gt;Chaque questionnaire est divisé en plusieurs sections :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Présence de l&#39;étudiant aux activités d&#39;enseignement&lt;/li&gt;&lt;li&gt;Dispositif d&#39;enseignement&lt;/li&gt;&lt;li&gt;Enseignant. Cette section est répétée pour chaque enseignant associé à l&#39;UE.&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Avant d&#39;être mis en production, les questionnaires sont testé auprès d&#39;un panel d&#39;étudiants afin de vérifier leur compréhension.&lt;br/&gt;&lt;br/&gt;Les questionnaires liés à chaque campagne doivent être conservés à des fins de consultation.&lt;br/&gt;&lt;br/&gt;Chaque questionnaire a une période de validité. À l&#39;issue de cette période, le questionnaire est périmé, mais est néanmoins conservé afin de pouvoir consulter les enquêtes auxquelles il a été associé.&lt;br/&gt;&lt;br/&gt;Un questionnaire différent est réalisé pour chaque activité d&#39;apprentissage.&lt;p/&gt;</div>
 
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
+			<li onClick="parent.toggleItem('LinkedDocument');" id="LinkedDocumentTitle">Linked Document</li>
 			<li onClick="parent.toggleItem('AssociationsFrom');" id="AssociationsFromTitle">Associations From</li>
 			<li onClick="parent.toggleItem('Links');" id="LinksTitle">Other Links</li>
 		</ul>
+		<div class="ItemBody" id="LinkedDocumentTable">
+			<iframe src="../../../../../../linkdocs/EAID_1E0924D9_A42D_4d6f_85C1_5F37FC0D7700.htm" frameborder="0" id="linkDocIFrame"></iframe>
+		</div>
 		<div class="ItemBody" id="AssociationsFromTable">
 			<table border="0" cellspacing="0" cellpadding="0" class="Table">
 				<tr>
@@ -190,14 +194,14 @@ function nameClassifier(name, separator)
 					<td width="40%" class="TableHeading">Notes</td>
 				</tr>
 				<tr>
-					<td width="30%" class="TableRow" valign="top"><a href="EA64.htm">Gérer la banque des questionnaires</a></td>
+					<td width="30%" class="TableRow" valign="top"><a href="EA64.htm">Gérer la banque des questions</a></td>
 					<td width="10%" class="TableRow" valign="top">UseCase</td>
 					<td width="10%" class="TableRow" valign="top">Dependency</td>
 					<td width="10%" class="TableRow" valign="top">To</td>
 					<td width="40%" class="TableRow" valign="top">&nbsp;</td>
 				</tr>
 				<tr>
-					<td width="30%" class="TableRow" valign="top"><a href="EA65.htm">Gérer les dimensions</a></td>
+					<td width="30%" class="TableRow" valign="top"><a href="EA65.htm">Gérer les dimensions des questions</a></td>
 					<td width="10%" class="TableRow" valign="top">UseCase</td>
 					<td width="10%" class="TableRow" valign="top">Dependency</td>
 					<td width="10%" class="TableRow" valign="top">To</td>
