--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA2/EA83.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA2/EA83.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Consulter les résultats par entités pédagogiques</title>
+<title>Consulter la grille des résultats par campagne</title>
 <link href="../../../../../../css/ea.css" rel="stylesheet" type="text/css" />
 <script>
 function initPage(src) {	
@@ -34,15 +34,15 @@ function nameClassifier(name, separator)
 <div class="pageHeader"></div>
 <div class="PageBody">
 	<div id="name_classifier" style="display: none;"></div>
-	<span class="ObjectTitle"><script type="text/javascript">document.write(nameClassifier("Consulter les résultats par entités pédagogiques", " : "))</script>  : Public   UseCase</span>
+	<span class="ObjectTitle"><script type="text/javascript">document.write(nameClassifier("Consulter la grille des résultats par campagne", " : "))</script>  : Public   UseCase</span>
 	<table border="0" cellpadding="0" cellspacing="0" class="ObjectDetails">
 		<tr>
 			<td width="15%" class="ObjectDetailsTopic">Created:</td>
-			<td width="85%" class="ObjectDetailsValue">13/07/2015 09:57:30</td>
+			<td width="85%" class="ObjectDetailsValue">13/07/2015 10:01:55</td>
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">17/07/2015 15:43:15</td>
+			<td class="ObjectDetailsValue">13/07/2015 14:56:32</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -51,7 +51,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr id="proj00" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Author:</td>
-			<td class="ObjectDetailsValue">Quentin</td>
+			<td class="ObjectDetailsValue">EvalEns</td>
 		</tr>
 		<tr id="proj01" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Version:</td>
@@ -87,25 +87,19 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr id="adv00" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">UUID:</td>
-			<td class="ObjectDetailsValue">{3C6441AD-97BB-4188-94F3-0750A0130216}</td>
+			<td class="ObjectDetailsValue">{4C3CCCF8-192D-48cc-B3A6-4A3BE8DB18FE}</td>
 		</tr>
 		<tr id="adv01" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Appears In:</td>
-			<td class="ObjectDetailsValue"><a href="../EA3/EA85.htm">Enquête</a>, <a href="EA77.htm">Consultation des évaluations</a></td>
+			<td class="ObjectDetailsValue"></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">Consulter les résultats par entité pédagogique permet à l&#39;agent pédagogique d&#39;avoir la grille de synthèse des résultats de l&#39;enquête. Celle-ci reprend les informations nécessaires à l&#39;appréciation des décisions de la commission pédagogique. Cette consultation restreint le contenu de la grille aux entités concernant l&#39;agent en question.&lt;br/&gt;&lt;br/&gt;Cette grille comporte entre autres, pour chaque entité évaluée :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;L&#39;intitulé de l&#39;entité&lt;/li&gt;&lt;li&gt;L&#39;identifiant de l&#39;entité&lt;/li&gt;&lt;li&gt;Si le quorum a été atteint ou non&lt;/li&gt;&lt;li&gt;Les informations sur le calcul du quorum (pourcentages, règles appliquées, nombre d&#39;étudiants de l&#39;enquête de l&#39;entité, nombre de réponses)&lt;/li&gt;&lt;li&gt;Les avis de la commission ainsi que les éventuels commentaires (confidentiels ou non)&lt;/li&gt;&lt;li&gt;Le nombre de commentaires rédigés par les étudiants&lt;/li&gt;&lt;li&gt;Les informations des entités liées, à l&#39;exception des commentaires confidentiels. Dans le cas des UE, les entités liées sont les enseignants, et &lt;i&gt;vice versa&lt;/i&gt;.&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;La grille donne la possibilité de filtrer le contenu selon différents critères, dont les suivants :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Quorum atteint ou non&lt;/li&gt;&lt;li&gt;Texte libre&lt;/li&gt;&lt;li&gt;Avis de la commission rendu ou non, ou incomplet&lt;/li&gt;&lt;li&gt;Avis de la commission&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Elle donne aussi la possibilité de trier le contenu de manière croissante ou décroissante selon les critères suivants :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Intitulé&lt;/li&gt;&lt;li&gt;Identifiant&lt;/li&gt;&lt;li&gt;Avis de la commission&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Elle permet de consulter les détails des résultats pour chaque entité et d&#39;exporter les données de la grille.&lt;br/&gt;&lt;br/&gt;Elle fournit le nombre total d&#39;UE, d&#39;étudiants ayant donné au moins une réponse et le nombre d&#39;UE avec au moins une réponse, ainsi que la légende des symboles utilisés. Elle doit aussi clairement indiquer la campagne concernée par les données.&lt;br/&gt;&lt;br/&gt;Elle permet de contacter la commission responsable des avis émis.&lt;p/&gt;</div>
-
+	
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
-			<li onClick="parent.toggleItem('LinkedDocument');" id="LinkedDocumentTitle">Linked Document</li>
 			<li onClick="parent.toggleItem('AssociationsFrom');" id="AssociationsFromTitle">Associations From</li>
-			<li onClick="parent.toggleItem('Constraints');" id="ConstraintsTitle">Constraints</li>
 			<li onClick="parent.toggleItem('Links');" id="LinksTitle">Other Links</li>
 		</ul>
-		<div class="ItemBody" id="LinkedDocumentTable">
-			<iframe src="../../../../../../linkdocs/EAID_3C6441AD_97BB_4188_94F3_0750A0130216.htm" frameborder="0" id="linkDocIFrame"></iframe>
-		</div>
 		<div class="ItemBody" id="AssociationsFromTable">
 			<table border="0" cellspacing="0" cellpadding="0" class="Table">
 				<tr>
@@ -115,7 +109,7 @@ function nameClassifier(name, separator)
 				</tr>
 				<tr>
 					<td width="40%" class="TableRow" valign="top">
-						<a href="../../../../../EA1/EA2/EA16.htm">Enseignant</a><br />
+						<a href="../../../../../EA1/EA2/EA1/EA27.htm">Commission pédagogique</a><br />
 						Actor &nbsp;
 					</td>
 					<td width="30%" class="TableRow" valign="top">
@@ -129,57 +123,9 @@ function nameClassifier(name, separator)
 				</tr>
 				<tr>
 					<td class="TableRowBottomDashed"  colspan="3">
-						<div class="DetailsDivParent"><img src="../../../../../../images/minus03.gif" align="absmiddle" id="DetailsImageLink35" onclick="parent.toggleDiv('detailsDIVLink35','DetailsImageLink35')" />Details:
-							<div id="detailsDIVLink35" class="DetailsDiv" >
+						<div class="DetailsDivParent"><img src="../../../../../../images/minus03.gif" align="absmiddle" id="DetailsImageLink37" onclick="parent.toggleDiv('detailsDIVLink37','DetailsImageLink37')" />Details:
+							<div id="detailsDIVLink37" class="DetailsDiv" >
 							&nbsp;
-							</div>
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<td width="40%" class="TableRow" valign="top">
-						<a href="../../../../../EA1/EA2/EA1/EA25.htm">Agent pédagogique</a><br />
-						Actor &nbsp;
-					</td>
-					<td width="30%" class="TableRow" valign="top">
-						<strong>Name:</strong> &nbsp;<br />
-						&nbsp;
-					</td>
-					<td width="30%" class="TableRow" valign="top">
-						<strong>Name:</strong> &nbsp;<br />
-						&nbsp;	
-					</td>
-				</tr>
-				<tr>
-					<td class="TableRowBottomDashed"  colspan="3">
-						<div class="DetailsDivParent"><img src="../../../../../../images/minus03.gif" align="absmiddle" id="DetailsImageLink36" onclick="parent.toggleDiv('detailsDIVLink36','DetailsImageLink36')" />Details:
-							<div id="detailsDIVLink36" class="DetailsDiv" >
-							&nbsp;
-							</div>
-						</div>
-					</td>
-				</tr>
-
-			</table>
-		</div>
-		<div class="ItemBody" id="ConstraintsTable">
-			<table border="0" cellspacing="0" cellpadding="0" class="Table">
-			  	<tr>
-					<td width="80%" class="TableHeading">Constraint</td>
-					<td width="10%" class="TableHeading">Type</td>
-					<td width="10%" class="TableHeading">Status</td>
-				</tr>
-				<tr>
-					<td width="80%" class="TableRow">Fin de la période de traitement des résultats</td>
-					<td width="10%" class="TableRow">Invariant</td>
-					<td width="10%" class="TableRow">Approved</td>
-				</tr>
-				<tr>
-					<td class="TableRowBottomDashed"  colspan="3">
-						<div class="DetailsDivParent"><img src="../../../../../../images/minus03.gif" align="absmiddle" id="DetailsImageConstraints37" onclick="parent.toggleDiv('detailsDIVConstraints37','DetailsImageConstraints37')" />Details:
-							<div id="detailsDIVConstraints37" class="DetailsDiv" >
-							<div class="ObjectDetailsNotes">La consultation n&#39;est ouverte aux enseignants qu&#39;au terme de la période de traitement des résultats.&lt;p/&gt;</div>
-
 							</div>
 						</div>
 					</td>
@@ -197,14 +143,14 @@ function nameClassifier(name, separator)
 					<td width="40%" class="TableHeading">Notes</td>
 				</tr>
 				<tr>
-					<td width="30%" class="TableRow" valign="top"><a href="../EA3/EA89.htm">Consultation par enseignants</a></td>
+					<td width="30%" class="TableRow" valign="top"><a href="EA81.htm">Consultation par unités d'enseignement</a></td>
 					<td width="10%" class="TableRow" valign="top">Collaboration</td>
 					<td width="10%" class="TableRow" valign="top">Realization</td>
 					<td width="10%" class="TableRow" valign="top">From</td>
 					<td width="40%" class="TableRow" valign="top">&nbsp;</td>
 				</tr>
 				<tr>
-					<td width="30%" class="TableRow" valign="top"><a href="../EA3/EA90.htm">Consultation par unités d'enseignement</a></td>
+					<td width="30%" class="TableRow" valign="top"><a href="EA80.htm">Consultation par enseignant</a></td>
 					<td width="10%" class="TableRow" valign="top">Collaboration</td>
 					<td width="10%" class="TableRow" valign="top">Realization</td>
 					<td width="10%" class="TableRow" valign="top">From</td>
