--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA2/EA85.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA2/EA85.htm
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Gestionnaire pédagogique facultaire</title>
-<link href="../../../../css/ea.css" rel="stylesheet" type="text/css" />
+<title>Établir un avis de circonstance</title>
+<link href="../../../../../../css/ea.css" rel="stylesheet" type="text/css" />
 <script>
 function initPage(src) {	
 	if(parent==this&&(this.location+"").indexOf('EARoot')!=-1)
@@ -34,24 +34,24 @@ function nameClassifier(name, separator)
 <div class="pageHeader"></div>
 <div class="PageBody">
 	<div id="name_classifier" style="display: none;"></div>
-	<span class="ObjectTitle"><script type="text/javascript">document.write(nameClassifier("Gestionnaire pédagogique facultaire", " : "))</script>  : Public   Actor</span>
+	<span class="ObjectTitle"><script type="text/javascript">document.write(nameClassifier("Établir un avis de circonstance", " : "))</script>  : Public   UseCase</span>
 	<table border="0" cellpadding="0" cellspacing="0" class="ObjectDetails">
 		<tr>
 			<td width="15%" class="ObjectDetailsTopic">Created:</td>
-			<td width="85%" class="ObjectDetailsValue">7/07/2015 18:31:11</td>
+			<td width="85%" class="ObjectDetailsValue">13/07/2015 16:25:07</td>
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">10/07/2015 22:12:43</td>
+			<td class="ObjectDetailsValue">22/07/2015 10:18:50</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
-			<td class="ObjectDetailsTopic"><img src="../../../../images/plus03.gif" align="absmiddle" id="proj" onclick="parent.toggleData(this.id)" />Project:</td>
+			<td class="ObjectDetailsTopic"><img src="../../../../../../images/plus03.gif" align="absmiddle" id="proj" onclick="parent.toggleData(this.id)" />Project:</td>
 			<td class="ObjectDetailsValue"></td>
 		</tr>
 		<tr id="proj00" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Author:</td>
-			<td class="ObjectDetailsValue">Moulay</td>
+			<td class="ObjectDetailsValue">Quentin</td>
 		</tr>
 		<tr id="proj01" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Version:</td>
@@ -82,24 +82,28 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"></td>
 		</tr>
 		<tr>
-			<td class="ObjectDetailsTopic"><img src="../../../../images/plus03.gif" align="absmiddle" id="adv" onclick="parent.toggleData(this.id)" />Advanced:</td>
+			<td class="ObjectDetailsTopic"><img src="../../../../../../images/plus03.gif" align="absmiddle" id="adv" onclick="parent.toggleData(this.id)" />Advanced:</td>
 			<td class="ObjectDetailsValue"></td>
 		</tr>
 		<tr id="adv00" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">UUID:</td>
-			<td class="ObjectDetailsValue">{5BAFB57C-E9AD-40ed-A72C-B8A190CF4EC6}</td>
+			<td class="ObjectDetailsValue">{53435DE4-9F13-44d1-9928-AA6468C35DA5}</td>
 		</tr>
 		<tr id="adv01" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Appears In:</td>
-			<td class="ObjectDetailsValue"><a href="EA22.htm">Actors</a>, <a href="../../../EA2/EA1/EA1/EA1/EA3/EA86.htm">Enquête</a>, <a href="../../../EA2/EA1/EA1/EA1/EA2/EA77.htm">Consultation des évaluations</a></td>
+			<td class="ObjectDetailsValue"><a href="../EA3/EA86.htm">Enquête</a>, <a href="EA77.htm">Consultation des évaluations</a></td>
 		</tr>
 	</table>
-	
+	<div class="ObjectDetailsNotes">Établir un avis de circonstance revient à évaluer individuellement un enseignant.&lt;br/&gt;Cette évaluation est prise en charge par la commission d&#39;évaluation pédagogique facultaire à la demande du doyen.&lt;br/&gt;Un avis de circonstance reprend les appréciations ainsi que les commentaires circonstanciés, l&#39;ensemble basé sur les évaluations périodiques des cinq dernières années.&lt;br/&gt;&lt;br/&gt;Les appréciations portent sur les dimensions suivantes (cf. &lt;a href=&quot;javascript:top.guidLink(&#39;{69D0A959-7820-4e8c-97D5-086C80178E35}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;règlement cadre&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; article 10) :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;conception des enseignements ;&lt;/li&gt;&lt;li&gt;déroulement des enseignements ;&lt;/li&gt;&lt;li&gt;évaluation des apprentissages ;&lt;/li&gt;&lt;li&gt;prestation individuelle ;&lt;/li&gt;&lt;li&gt;appréciation globale ;&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;dont le qualificatif est l&#39;un des suivants :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;particulièrement favorable ;&lt;/li&gt;&lt;li&gt;favorable ;&lt;/li&gt;&lt;li&gt;défavorable ;&lt;/li&gt;&lt;li&gt;sans objet.&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Il est transmis à la commission spéciale dont les compétences sont fixées dans l&#39;article 71 des statuts organiques.&lt;p/&gt;</div>
+
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
+			<li onClick="parent.toggleItem('LinkedDocument');" id="LinkedDocumentTitle">Linked Document</li>
 			<li onClick="parent.toggleItem('AssociationsTo');" id="AssociationsToTitle">Associations To</li>
-			<li onClick="parent.toggleItem('Links');" id="LinksTitle">Other Links</li>
 		</ul>
+		<div class="ItemBody" id="LinkedDocumentTable">
+			<iframe src="../../../../../../linkdocs/EAID_53435DE4_9F13_44d1_9928_AA6468C35DA5.htm" frameborder="0" id="linkDocIFrame"></iframe>
+		</div>
 		<div class="ItemBody" id="AssociationsToTable">
 			<table border="0" cellspacing="0" cellpadding="0" class="Table">
 				<tr>
@@ -109,8 +113,8 @@ function nameClassifier(name, separator)
 				</tr>
 				<tr>
 					<td width="40%" class="TableRow" valign="top">
-						<a href="../../../EA2/EA1/EA1/EA1/EA2/EA82.htm">Consulter la grille des résultats</a><br />
-						UseCase &nbsp;
+						<a href="../../../../../EA1/EA2/EA1/EA27.htm">Commission pédagogique</a><br />
+						Actor &nbsp;
 					</td>
 					<td width="30%" class="TableRow" valign="top">
 						<strong>Name:</strong> &nbsp;<br />
@@ -123,38 +127,12 @@ function nameClassifier(name, separator)
 				</tr>
 				<tr>
 					<td class="TableRowBottomDashed"  colspan="3">
-						<div class="DetailsDivParent"><img src="../../../../images/minus03.gif" align="absmiddle" id="DetailsImageLink14" onclick="parent.toggleDiv('detailsDIVLink14','DetailsImageLink14')" />Details:
-							<div id="detailsDIVLink14" class="DetailsDiv" >
+						<div class="DetailsDivParent"><img src="../../../../../../images/minus03.gif" align="absmiddle" id="DetailsImageLink41" onclick="parent.toggleDiv('detailsDIVLink41','DetailsImageLink41')" />Details:
+							<div id="detailsDIVLink41" class="DetailsDiv" >
 							&nbsp;
 							</div>
 						</div>
 					</td>
-				</tr>
-
-			</table>
-		</div>
-		<div class="ItemBody" id="LinksTable">
-			<table align="center" border="0" cellspacing="0" cellpadding="0" class="Table">
-				<tr>
-					<td width="30%" class="TableHeading">Object</td>
-					<td width="10%" class="TableHeading">Type</td>
-					<td width="10%" class="TableHeading">Connection</td>
-					<td width="10%" class="TableHeading">Direction</td>
-					<td width="40%" class="TableHeading">Notes</td>
-				</tr>
-				<tr>
-					<td width="30%" class="TableRow" valign="top"><a href="EA27.htm">Commission pédagogique</a></td>
-					<td width="10%" class="TableRow" valign="top">Actor</td>
-					<td width="10%" class="TableRow" valign="top">Generalization</td>
-					<td width="10%" class="TableRow" valign="top">From</td>
-					<td width="40%" class="TableRow" valign="top">&nbsp;</td>
-				</tr>
-				<tr>
-					<td width="30%" class="TableRow" valign="top"><a href="EA25.htm">Agent pédagogique</a></td>
-					<td width="10%" class="TableRow" valign="top">Actor</td>
-					<td width="10%" class="TableRow" valign="top">Generalization</td>
-					<td width="10%" class="TableRow" valign="top">To</td>
-					<td width="40%" class="TableRow" valign="top">&nbsp;</td>
 				</tr>
 
 			</table>
