--- a/doc_report/EARoot/EA2/EA1/EA1/EA1/EA3/EA92.htm
+++ b/doc_report/EARoot/EA2/EA1/EA1/EA1/EA3/EA92.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Dépouillement</title>
+<title>Délibération</title>
 <link href="../../../../../../css/ea.css" rel="stylesheet" type="text/css" />
 <script>
 function initPage(src) {	
@@ -34,15 +34,15 @@ function nameClassifier(name, separator)
 <div class="pageHeader"></div>
 <div class="PageBody">
 	<div id="name_classifier" style="display: none;"></div>
-	<span class="ObjectTitle"><script type="text/javascript">document.write(nameClassifier("Dépouillement", " : "))</script>  : Public   Collaboration</span>
+	<span class="ObjectTitle"><script type="text/javascript">document.write(nameClassifier("Délibération", " : "))</script>  : Public   Collaboration</span>
 	<table border="0" cellpadding="0" cellspacing="0" class="ObjectDetails">
 		<tr>
 			<td width="15%" class="ObjectDetailsTopic">Created:</td>
-			<td width="85%" class="ObjectDetailsValue">13/07/2015 09:58:27</td>
+			<td width="85%" class="ObjectDetailsValue">13/07/2015 09:58:36</td>
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">17/07/2015 17:50:22</td>
+			<td class="ObjectDetailsValue">22/07/2015 10:09:25</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -87,14 +87,14 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr id="adv00" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">UUID:</td>
-			<td class="ObjectDetailsValue">{1DB386BF-C653-4db8-B884-F07BF27DBBBD}</td>
+			<td class="ObjectDetailsValue">{B12670D0-B63B-415d-8A85-A2A35F552C24}</td>
 		</tr>
 		<tr id="adv01" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Appears In:</td>
-			<td class="ObjectDetailsValue"><a href="EA85.htm">Enquête</a></td>
+			<td class="ObjectDetailsValue"><a href="EA86.htm">Enquête</a></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">Le dépouillement est l&#39;évaluation préliminaire des données issues du traitement des résutlats de l&#39;enquête. Celle-ci est effectuée par une partie des membres de la commission pédagogique facultaire.&lt;br/&gt;&lt;br/&gt;Les membres de la commissions utilisent la « &lt;a href=&quot;javascript:top.guidLink(&#39;{A46FEEF8-0E10-4a48-9AB4-F31D8E5BFE93}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Consultation par unités d&#39;enseignement&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; » et la « &lt;a href=&quot;javascript:top.guidLink(&#39;{13EF0C11-713D-44ad-9D4B-1AD9100AF3FC}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Consultation par enseignant&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; ».&lt;br/&gt;&lt;br/&gt;&lt;br/&gt;Ces derniers distinguent les cas nécessitant ou non une délibération en assemblée plénière.&lt;br/&gt;&lt;br/&gt;Les détails des interfaces d&#39;évaluation et de consultation sont décrits dans le processus « &lt;a href=&quot;javascript:top.guidLink(&#39;{6A294285-B80F-4599-BE63-3073599842B7}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Consulter par grille&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; ».&lt;br/&gt;&lt;br/&gt;Lorsqu&#39;un membre de la commission juge qu&#39;une unité d&#39;enseignement ou un enseignant ne nécessite pas de discussion, il peut lui assigner l&#39;une des cinq appréciations présentées dans le processus « &lt;a href=&quot;javascript:top.guidLink(&#39;{617E555E-FFEF-4937-9728-73D572DD152C}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Traiter les résultats&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; », et l&#39;agrémenter d&#39;un commentaire circonstancié.&lt;p/&gt;</div>
+	<div class="ObjectDetailsNotes">La délibération consiste à :&lt;br/&gt;&lt;ul&gt;<br />&lt;li&gt;Valider les avis périodique attribués lors du dépouillement.&lt;/li&gt;&lt;li&gt;Délibérer les autre cas. Pour ce faire, la commission s&#39;appuie sur les éventuelles informations adjointes lors du dépouillement.&lt;/li&gt;&lt;/ul&gt;<br />&lt;br/&gt;Elle se déroule en assemblée plénière de la commission pédagogique facultaire.&lt;br/&gt;&lt;br/&gt;Les cas potentiellement « problématiques » au sens de l&#39;échelle d&#39;appréciation sont systématiquement évalués lors de la délibération, puisqu&#39;ils ne sont pas triviaux. Le processus décrivant leur traitement est décrit dans « &lt;a href=&quot;javascript:top.guidLink(&#39;{1AF2652A-F7D2-498e-B33E-61D662CEF39E}&#39;)&quot;&gt;&lt;font color=&quot;#0000ff&quot;&gt;&lt;u&gt;Gérer les évaluations défavorables&lt;/u&gt;&lt;/font&gt;&lt;/a&gt; ».&lt;br/&gt;&lt;p/&gt;</div>
 
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
@@ -102,7 +102,7 @@ function nameClassifier(name, separator)
 			<li onClick="parent.toggleItem('Links');" id="LinksTitle">Other Links</li>
 		</ul>
 		<div class="ItemBody" id="LinkedDocumentTable">
-			<iframe src="../../../../../../linkdocs/EAID_1DB386BF_C653_4db8_B884_F07BF27DBBBD.htm" frameborder="0" id="linkDocIFrame"></iframe>
+			<iframe src="../../../../../../linkdocs/EAID_B12670D0_B63B_415d_8A85_A2A35F552C24.htm" frameborder="0" id="linkDocIFrame"></iframe>
 		</div>
 		<div class="ItemBody" id="LinksTable">
 			<table align="center" border="0" cellspacing="0" cellpadding="0" class="Table">
